@@ -215,7 +215,7 @@ library:
 @item Lego Mindstorms RSO       @tab X @tab X
 @item RTMP                      @tab X @tab X
     @tab Output is performed by publishing stream to RTMP server
-@item RTP                       @tab X @tab
+@item RTP                       @tab X @tab X
 @item RTSP                      @tab X @tab X
 @item SAP                       @tab X @tab X
 @item SDP                       @tab   @tab X
